# quizzo

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE.md  Procfile  README.md  deno.json  deps.ts  imports.json  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: test.yml
.vim/: coc-settings.json
crates/api/: Cargo.toml
crates/api/src/: auth.rs  interaction.rs  lib.rs  quiz.rs
crates/api/src/auth/: callback.rs  login.rs  mod.rs
crates/api/src/bot/: error.rs  mod.rs
crates/api/src/lobby/: error.rs  mod.rs
crates/api/src/util/: mod.rs  session.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs
crates/lobby/: Cargo.toml
crates/lobby/src/: error.rs  lib.rs  service.rs  validator.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs  oauth.rs  quiz.rs  session.rs
scripts/: deno.json  init.sql  register-commands.ts  register.ts
src/: collector.ts  env.ts  error.rs  handler.rs  http.rs  lib.rs  main.rs  main.ts  model.rs  quiz.rs  service.rs  state.ts  validate.rs
src/commands/: create.ts  leaderboard.ts  mod.ts  ping.ts  start.ts
src/http/: error.rs  fetcher.rs  mod.rs
src/lobby/: error.rs  mod.rs
src/model/: discord.rs  event.ts  gateway.ts  mod.rs  mod.ts  op.ts  quiz.rs  quiz.ts
