[workspace]
members = [
    "crates/api",
    "crates/db",
    "crates/model",
]

[package]
name = "quizzo"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
api = { path = "crates/api", package = "quizzo-api" }
hex = { version = "0.4", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

[dependencies.hyper]
version = "0.14"
default-features = false
features = ["http1", "server"]

[dependencies.tokio]
version = "1.20"
default-features = false
features = ["macros", "rt-multi-thread", "parking_lot", "signal"]

[profile.release]
lto = true
strip = true
