[workspace]
members = [
    "crates/api",
    "crates/db",
    "crates/model",
]

[package]
name = "quizzo"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
api = { path = "crates/api", package = "quizzo-api" }
env_logger = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }

[dependencies.hyper]
version = "0.14"
default-features = false
features = ["http1", "server"]

[dependencies.tokio]
version = "1.27"
default-features = false
features = ["macros", "rt-multi-thread", "parking_lot", "signal"]

[profile.release]
lto = true
strip = true
