[workspace]
members = [
    "crates/api",
    "crates/db",
    "crates/model",
]

[package]
name = "quizzo"
version = "0.7.0"
edition = "2021"

[dependencies]
anyhow = "1"
api = { path = "crates/api", package = "quizzo-api" }
env_logger = { version = "0.10", default-features = false }
hex = "0.4"
http-body-util = "0.1.0"
hyper-util = { version = "0.1.1", features = ["tokio"] }
log = "0.4"

[dependencies.hyper]
version = "1"
default-features = false
features = ["http1", "server"]

[dependencies.tokio]
version = "1.27"
default-features = false
features = ["macros", "rt-multi-thread", "signal"]

[profile.release]
lto = true
strip = true
