[package]
name = "quizzo-api"
version = "0.7.0"
edition = "2021"

[dependencies]
dashmap = { version = "5.3", default-features = false }
db = { path = "../db", package = "quizzo-db" }
log = "0.4"
serde_json = "1"
twilight-model = "0.15"

[dependencies.tokio]
version = "1.27"
default-features = false
features = ["macros", "sync", "time"]

[dependencies.twilight-http]
version = "0.15"
default-features = false
features = ["decompression", "rustls-native-roots", "trust-dns"]
