[package]
name = "quizzo-api"
version = "0.7.0"
edition = "2021"

[dependencies]
dashmap = { version = "5.5", default-features = false }
db = { path = "../db", package = "quizzo-db" }
hex = { version = "0.4", default-features = false }
http-body-util = "0.1.0"
hyper = { version = "1", default-features = false }
log = "0.4"
ring = { version = "0.17", default-features = false }
serde_json = "1"
twilight-model = "0.15"

[dependencies.tokio]
version = "1.27"
default-features = false
features = ["macros", "sync", "time"]

[dependencies.twilight-http]
version = "0.15"
default-features = false
features = ["decompression", "rustls-native-roots", "trust-dns"]
